--- a/source/ppt/share/tools/tools.html
+++ b/source/ppt/share/tools/tools.html
@@ -182,6 +182,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <ul>
 <li>MiniMap</li>
 <li>Markdown</li>
+<li>Script</li>
 <li>Golang</li>
 <li>TypeScript</li>
 </ul>
@@ -194,9 +195,9 @@ code > span.er { color: #ff0000; font-weight: bold; }
 </ul>
 <div class="fragment">
 <ul>
-<li>没有卵用</li>
-<li>仅供娱乐</li>
 <li>做工粗糙</li>
+<li>仅供娱乐</li>
+<li>没有卵用</li>
 </ul>
 </div>
 </section>
